# pygrametl

./: .gitignore  CHANGELOG.rst  FIFODict.py  JDBCConnectionWrapper.py  LICENSE.txt  MANIFEST.in  README.rst  README.txt  __init__.py  aggregators.py  datasources.py  index.html  jythonmultiprocessing.py  license.txt  parallel.py  pyproject.toml  setup.py  steps.py  tables.py
.github/workflows/: python-unittest-on-pr-and-push.yml
doc/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_sources/: index.rst.txt
doc/_sources/api/: aggregators.rst.txt  fifodict.txt  jdbcconnectionwrapper.txt  parallel.txt  (+5 more)
doc/_static/: alabaster.css  documentation_options.js
doc/api/: aggregators.html  datasources.html  drawntabletesting.html  fifodict.html  jdbcconnectionwrapper.html  jythonmultiprocessing.html  parallel.html  pygrametl.html  steps.html  tables.html
doc/examples/: bulkloading.html  database.html  datasources.html  dimensions.html  facttable.html  facttables.html  jython.html  parallel.html  testing.html
doc/quickstart/: beginner.html  install.html
docs/: Makefile  conf.py  index.rst  make.bat
docs/_exts/: autoformat.py  formatref.py  rtdmockup.py  version.py
docs/_static/: example.sql  region.csv  sale.sqlite
docs/api/: datasources.rst  drawntabletesting.rst  jythonmultiprocessing.rst  pygrametl.rst  steps.rst
docs/examples/: bulkloading.rst  database.rst  datasources.rst  dimensions.rst  facttable.rst  facttables.rst  jython.rst  parallel.rst  testing.rst
docs/quickstart/: beginner.rst  install.rst
jythonsupport/: Value.java
pygrametl/: FIFODict.py  JDBCConnectionWrapper.py  __init__.py  aggregators.py  datasources.py  jythonmultiprocessing.py  parallel.py  steps.py  tables.py
pygrametl/drawntabletesting/: __init__.py  dttr.py  formattable.py
pygrametl/jythonsupport/: Value.java
stylesheets/: stylesheet.css
tests/: __init__.py  test_datasources.py  test_init.py  utilities.py
tests/drawntabletesting/: __init__.py  test_dtt.py  test_dttr.py
tests/tables/: test_Dimension.py  test_FactTable.py  test_SlowlyChangingDimension_lookupasof.py
(+23 files in other folders)
