[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygrametl"
authors = [{name = "Aalborg University", email = "pygrametl@cs.aau.dk"}]
urls = {Homepage = "http://pygrametl.org"}
description = "ETL programming in Python"
readme = "README.rst"
license = "BSD-2-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Java",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dynamic = ["version"]
scripts = {dttr = "pygrametl.drawntabletesting.dttr:main"}

[tool.setuptools.dynamic]
version = {attr = "pygrametl.__version__"}